# learntube-ai-anna-app

./: README.md  README.zh-CN.md  anna.md  project.md
.github/workflows/: anna-app-publish.yml  learntube-ai.yml
.hallmark/: log.json  preflight.json
examples/anna-app-focus-flow/: README.md  README.zh-CN.md
examples/anna-app-focus-flow/executas/focus-session-go/: README.md  README.zh-CN.md
examples/anna-app-learntube-ai/: .gitignore  DEPLOY.md  README.md  app.json  manifest.json  package-lock.json  package.json  playwright.config.ts
examples/anna-app-learntube-ai/.hallmark/: log.json
examples/anna-app-learntube-ai/bundle/: app.js  index.html  style.css  tokens.css
examples/anna-app-learntube-ai/executas/learntube-processor/: executa.json  learntube_processor.py  pyproject.toml
examples/anna-app-learntube-ai/fixtures/: happy-path.jsonl
examples/anna-app-learntube-ai/tests/bundle/: app.spec.ts
examples/anna-app-learntube-ai/tests/e2e/: app.spec.ts
examples/anna-app-llm-demo/: README.md  manifest.json
examples/anna-app-llm-demo/bundle/: anna-tool-ids.js  app.js  index.html  style.css
examples/anna-app-llm-demo/executas/llm-via-executa-python/: README.md  executa.json  llm_via_executa_plugin.py
examples/anna-app-llm-demo/fixtures/: happy-path.jsonl
examples/go/: README.md  README.zh-CN.md
examples/nodejs/: README.md  README.zh-CN.md
examples/python/: README.md  README.zh-CN.md
sdk/nodejs/: storage.js
sdk/python/executa_sdk/: __init__.py  agent.py
