[project]
name = "tool-nikku696969-learntube-processor-adb7bdym"
version = "0.1.2"
description = "LearnTube Processor - Executa stdio tool for the LearnTube AI Anna App"
requires-python = ">=3.10"
authors = [{ name = "Anna Developer" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[project.scripts]
"tool-nikku696969-learntube-processor-adb7bdym" = "learntube_processor:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["learntube_processor"]
